implemented atomic ring buffer both mpmc and spsc and compared performance with the standard mutex one,also swapped the mutex from std lib to parking lot which gave some perfomance gains in my naive benchmark

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+parking_lot = "0.12.5"
 
 [dev-dependencies]
 criterion = { version = "0.8.1", features = ["html_reports"] }
